# Book-Statistics

./: .gitignore  CODEOWNERS  Contents.aux  README.md  classicthesis-config.tex  classicthesis.sty  macros.tex  main.aux  main.bbl  main.blg  main.idx  main.ilg  main.ind  main.run.xml  main.tex  main.toc  pyproject.toml  refs.bib
Chapters/: assigning_a_cost_function.tex  assigning_probabilities.tex  bayesian_model_selection.tex  bayesian_statistics.tex  framing.tex  frequentist_statistics.tex  introduction.tex  preface.tex  probability_theory_introduction.tex  set_theory_introduction.tex  statistical_paradigms.tex  statistics_introduction.tex
Chapters/appendices/: app_HMC_algorithm.aux  (+3 more)
FrontBackMatter/: Acknowledgments.aux  Bibliography.aux  Index.aux  Titleback.aux  Titleback.tex  Titlepage.aux  Titlepage.tex  cover.tex
dev/: additional_examples.tex  bayesian_statistics.tex  bias.md  classification_playground.py  decision_theory.tex  frequentist_KL_divergence.tex  frequentist_assigning_a_cost_function.tex  historical_introduction.tex  indoor_environment_test.tex  optimizing_lgbm.py  prior_distribution.tex  scoring_calibration.tex  sequential_decisions.tex  trashed.tex
figures/: .$random_variables.png.bkp  .$random_variables2.png.bkp  generic_set.tex  graph.tex  set_complementary.tex  set_disjoint.tex  set_intersection.tex  set_minus.tex  set_minus2.tex  set_partition.tex  set_subset.tex  set_union.tex  tikz_decision_theory.tex  tikz_generic_model.tex  tikz_venn_diagram.tex  tikz_venn_diagram_decision.tex  tikz_venn_diagram_statistics.tex
src/: ber_example.py
(+70 files in other folders)
