[tool.poetry]
name = "book-statitics"
version = "0.1.0"
description = "A book on statistics"
authors = ["Jonas Petersen"]
readme = "README.md"
repository = "https://github.com/KaptajnFjaesing/Book-Statistics"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
numpy = "^2.1.3"
matplotlib = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
